manifests/ingress-gateway/pirates-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pirates-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pirates
spec:
  hosts:
  - "*"
  gateways:
  - pirates-gateway
  http:
  - route:
    - destination:
        host: demo-service
        port:
          number: 9080
